<resources>
    <string name="app_name">day7_orientation</string>
    <string name="first_button">Первая кнопка</string>
    <string name="second_button">Вторая кнопка</string>
    <string name="third__button">Третья кнопка</string>
    <string name="fourth_button">Четвертая кнопка</string>
    <string name="fifth_button">Пятая кнопка</string>
    <string name="sixth_button">Шестая кнопка</string>
    <string name="next_stage">К следующему этапу</string>
    <string name="or_landscape">Альбомный режим</string>
    <string name="or_portrait">Портретный режим</string>
    <string name="count">Считаем ворон</string>
</resources>